<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoLibro"
    android:padding="@dimen/basic_padding"
    tools:context=".Ej11Activity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ej11_block_height"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="@dimen/separacion"
        android:text="@string/titulo"
        app:layout_constraintBottom_toBottomOf="@+id/et_titulo"
        app:layout_constraintEnd_toStartOf="@+id/et_titulo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_titulo" />

    <EditText
        android:id="@+id/et_titulo"
        android:layout_height="@dimen/ej11_block_height"
        android:layout_width="0dp"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/teclea_titulo"
        android:importantForAutofill="no"

        android:inputType="textPersonName"
        android:padding="@dimen/separacion"
        app:layout_constraintBottom_toTopOf="@+id/et_autor"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- 0dp = "match_constraint"

    https://developer.android.com/guide/topics/text/autofill-optimize
    -->


    <TextView
        android:id="@+id/tv_autor"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ej11_block_height"
        android:height="@dimen/ej11_block_height"
        android:background="@color/grey"
        android:gravity="center"
        android:padding="@dimen/separacion"
        android:text="@string/autor"
        app:layout_constraintBottom_toBottomOf="@+id/et_autor"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_autor" />

    <EditText
        android:id="@+id/et_autor"
        android:layout_width="0dp"
        android:layout_height="@dimen/ej11_block_height"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/teclea_autor"
        android:importantForAutofill="no"

        android:inputType="textPersonName"
        android:padding="@dimen/separacion"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_autor"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ej11_block2_height"

        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/et_autor"
        tools:layout_editor_absoluteX="30dp" />

    <!-- Se podría usar un Layout anidado en lugar de definir el bloque solo con un objeto View -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="111dp"
        android:layout_marginStart="@dimen/separacion"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.482"
        app:srcCompat="@drawable/libro" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tema"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/grey"

        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/separacion"
            android:text="@string/tecnico" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/separacion"
            android:text="@string/lectura" />
    </RadioGroup>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ej11_block_height"

        android:background="@color/grey"
        android:paddingHorizontal="@dimen/separacion"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separacion"
            android:text="@string/traducido_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/cb_frances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/separacion"
            android:text="@string/frances"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cb_ingles" />

        <CheckBox
            android:id="@+id/cb_ingles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/separacion"
            android:text="@string/ingles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cb_frances"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>


