<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_padding"
    tools:context=".Ej04Activity">

    <TextView
        android:id="@+id/tv_ej4_iexplorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_iexplorer"
        app:layout_constraintStart_toStartOf="@+id/ej04_btn_si"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ej04_btn_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion"
        android:onClick="onClickEj04"
        android:text="@string/si"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/ej04_btn_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ej4_iexplorer" />

    <Button
        android:id="@+id/ej04_btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separacion"
        android:onClick="onClickEj04"
        android:text="@string/no"
        app:layout_constraintEnd_toStartOf="@+id/ej04_btn_aveces"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ej04_btn_si"
        app:layout_constraintTop_toTopOf="@id/ej04_btn_si" />

    <Button
        android:id="@+id/ej04_btn_aveces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/separacion"
        android:onClick="onClickEj04"
        android:text="@string/a_veces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ej04_btn_no"
        app:layout_constraintTop_toTopOf="@+id/ej04_btn_si" />

</androidx.constraintlayout.widget.ConstraintLayout>